ack: platinium -> platinum

--- a/src/aknowledgments.tex
+++ b/src/aknowledgments.tex
@@ -8,7 +8,7 @@ The other giant upon whose shoulders this book stands is \textbf{Upsilandre}. He
 
 Thanks to \textbf{Charles MacDonald} for sharing his knowledge of the CPS-1 and for patiently explaining and re-explaining the art of tile map circuitry.
 
-Thanks to \textbf{Ben Torkington} for making available "SF2:Platinium", his ANSI C re-write of "Street Fighter II: World Warriors".
+Thanks to \textbf{Ben Torkington} for making available "SF2:Platinum", his ANSI C re-write of "Street Fighter II: World Warriors".
 
 Thanks to \textbf{STG} for his translation of Japanese articles on \href{https://shmuplations.com}{shmuplations.com}.
 
